--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 *.class
+Synchronization/.idea/compiler.xml
+Synchronization/.idea/description.html
+Synchronization/.idea/encodings.xml
+Synchronization/.idea/misc.xml
+Synchronization/.idea/modules.xml
+Synchronization/.idea/vcs.xml
+Synchronization/.idea/workspace.xml
